--- a/chatbot/src/main/resources/application.properties
+++ b/chatbot/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.username=chatbot_user
 spring.datasource.password=chatbot_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 google.api.key=AIzaSyBNBn9am6AfJ5xyyZWrB9T4I5-kTQoNR7Y
-
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/migration/schema.sql
 # AI Service Configuration
 # Set to true for mock testing, false for real Gemini API
-ai.service.mock=true
+ai.service.mock=false
