add frontend, config docker

--- a/chatbot/src/main/resources/application.properties
+++ b/chatbot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=chatbot
-spring.datasource.url=jdbc:postgresql://localhost:5432/chatbot
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/chatbot}
 spring.datasource.username=chatbot_user
 spring.datasource.password=chatbot_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -7,6 +7,11 @@ google.api.key=AIzaSyBNBn9am6AfJ5xyyZWrB9T4I5-kTQoNR7Y
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:db/migration/schema.sql
+
 # AI Service Configuration
 # Set to true for mock testing, false for real Gemini API
 ai.service.mock=false
+
+#redis
+#spring.data.redis.host=redis
+#spring.data.redis.port=6379
