--- a/chatbot/src/main/resources/application.properties
+++ b/chatbot/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/chatbot}
 spring.datasource.username=chatbot_user
 spring.datasource.password=chatbot_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
-google.api.key=AIzaSyBNBn9am6AfJ5xyyZWrB9T4I5-kTQoNR7Y
+google.api.key=
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:db/migration/schema.sql
