feat: improve UI

--- a/chatbot/src/main/resources/application.properties
+++ b/chatbot/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/chatbot}
 spring.datasource.username=chatbot_user
 spring.datasource.password=chatbot_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
-google.api.key=
+google.api.key=AIzaSyBNBn9am6AfJ5xyyZWrB9T4I5-kTQoNR7Y
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:db/migration/schema.sql
@@ -13,5 +13,5 @@ spring.sql.init.schema-locations=classpath:db/migration/schema.sql
 ai.service.mock=false
 
 #redis
-#spring.data.redis.host=redis
-#spring.data.redis.port=6379
+spring.data.redis.host=redis
+spring.data.redis.port=6379
