--- a/chatbot/src/main/resources/application.properties
+++ b/chatbot/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=chatbot
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/chatbot}
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/chatbot?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
 spring.datasource.username=chatbot_user
 spring.datasource.password=chatbot_pass
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 google.api.key=AIzaSyBNBn9am6AfJ5xyyZWrB9T4I5-kTQoNR7Y
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
